--- a/starter-code/views/celebrities/index.hbs
+++ b/starter-code/views/celebrities/index.hbs
@@ -3,6 +3,9 @@
 {{#each celebrities}}
 <li>
   <a href="/celebrities/{{_id}}">{{name}}</a>
+  <form action="/celebrities/{{_id}}/delete" method="POST">
+  <button type="submit">Delete</button>
+  </form>
 </li>
 {{/each}}
 </ul>
