--- a/starter-code/views/celebrities/show.hbs
+++ b/starter-code/views/celebrities/show.hbs
@@ -2,3 +2,4 @@
 <h3><span>Name of the Celebrity :</span> {{celebrity.name}}</h3>
 <p><span>Occupation :</span> {{celebrity.occupation}}</p>
 <p><span>Catchphrase :</span> {{celebrity.catchPhrase}}</p>
+<a href="/celebrities/{{celebrity._id}}/edit">Edit</a>
