--- a/starter-code/views/celebrities/index.hbs
+++ b/starter-code/views/celebrities/index.hbs
@@ -6,6 +6,9 @@
   <form action="/celebrities/{{_id}}/delete" method="POST">
   <button type="submit">Delete</button>
   </form>
+  <form action="/celebrities/{{_id}}/edit" method="GET">
+  <button type="submit">Edit</button>
+  </form>
 </li>
 {{/each}}
 </ul>
