--- a/starter-code/views/index.hbs
+++ b/starter-code/views/index.hbs
@@ -1,3 +1,4 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
 <a href="/celebrities">View All Celebrities</a>
+<a href="/movies">View All Movies</a>
