--- a/starter-code/views/movies/new.hbs
+++ b/starter-code/views/movies/new.hbs
@@ -18,9 +18,9 @@
 
   <label>
     Cast: 
-    <select name="cast">
+    <select multiple name="cast">
       {{#each celebrities}}
-      <option value="{{name}}">{{name}}</option>
+      <option value="{{_id}}">{{name}}</option>
       {{/each}}
     </select> 
   </label>
