--- a/starter-code/views/movies/show.hbs
+++ b/starter-code/views/movies/show.hbs
@@ -8,3 +8,6 @@
   <li><a href="/celebrities/{{this._id}}">{{this.name}}</a></li>
  {{/each}}
 </ul>
+<form action="/movies/{{movie._id}}/delete" method="POST">
+ <button type="submit">Delete</button>
+</form>
