--- a/starter-code/views/movies/show.hbs
+++ b/starter-code/views/movies/show.hbs
@@ -11,3 +11,6 @@
 <form action="/movies/{{movie._id}}/delete" method="POST">
  <button type="submit">Delete</button>
 </form>
+<form action="/movies/{{movie._id}}/edit" method="GET">
+ <button type="submit">Edit</button>
+</form>
